# shadow-lab-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  DEMO-SCOPE.md  README.md  __init__.py  aggregator.py  architecture.md  conftest.py  level_tracker.py  models.py  morning_report.py  morning_report_fast.py  ofi.py  pipeline.py  pipeline_cpp.py  pyproject.toml  requirements.txt  run.py  run_server.py  test_book_divergence.py  test_stress.py  validate_p6.py
backtest/: __init__.py  report.py  runner.py  scorer.py
core/: CMakeLists.txt
core/include/p6/: orderbook.hpp  pipeline.hpp  types.hpp
core/src/: aggregator.cpp  bindings.cpp  cup_flip.cpp  orderbook.cpp  pipeline.cpp  spectral_force.cpp  spoof_detection.cpp  staircase.cpp
core/tests/: test_orderbook.cpp  test_pipeline.cpp
cup_flip/: __init__.py  exhaustion_detector.py  pressure_scorer.py  stall_detector.py  state_machine.py  stop_run_detector.py  streak_detector.py  tape_reader.py
demo/: library_demo.yaml
depth_indicator/: __init__.py  bar_renderer.py  chart_overlay.py  dom_panel.py  level_aggregator.py  stats_header.py  tape_feed.py
ingestion/: __init__.py  base_feed.py  batch_scanner.py  binance_feed.py  databento_feed.py  dbn_filename.py  replay.py  synthetic.py
p6lab/: .env.example  Makefile  SPEC.md  pyproject.toml  requirements-lock.txt
p6lab/.pytest_cache/v/cache/: lastfailed  nodeids
p6lab/sanity/: burst_tuning_sweep.py  phase1_l1_features.py  phase2_queue_tracker.py  phase3_pattern_mining.py  phase4_correlation_engine.py  phase5_validation.py
p6lab/scripts/: backfill_normalizer.py  generate_sample_data.py  p6lab_env.sh  promote_pattern.py  replay_outcomes_retire.py  run_live.py  test_audit_log.py  test_chart_overlay.js  test_discord_webhook.py  test_metrics.py  tier_backfill_analysis.py  train_bsv_cnn.py
p6lab/server/: backtest_api.py  correlation_api.py  fill_sim_api.py  pattern_api.py  replay_api.py
p6lab/src/p6lab/: STAGE2-MEMORY-STATUS.md  __init__.py  _logging.py  precision_grid.py
p6lab/src/p6lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
p6lab/src/p6lab/correlation/: __init__.py  divergence_audit.py  engine.py  learned_regime.py  match_broker.py  regime_conditioner.py  scorer.py
p6lab/src/p6lab/correlation/renderers/: __init__.py  audit_log.py  metrics.py  outcome_tracker.py  webhook.py
p6lab/src/p6lab/execution/: __init__.py  cost_model.py  fill_simulator.py  order_router.py  queue_tracker.py
p6lab/src/p6lab/features/: __init__.py  _l1_adapter.py  bsv_latent.py  coherence.py  cross_asset.py  emd.py  energy_features.py  fragility_index.py  hasbrouck_lambda.py  hawkes.py  hilbert_features.py  l1_features.py  l2_features.py  markov_lob.py  microstructure.py  path_signatures.py  qdif.py  spectral_force.py  vpin.py  wavelet.py
p6lab/src/p6lab/ingestion/: __init__.py  event_windowing.py  instrument_normalizer.py  triple_view.py
p6lab/src/p6lab/live/: __init__.py  activity_detector.py  feature_accumulator.py  multi_symbol_runner.py  runner.py  tier_filter.py
p6lab/src/p6lab/patterns/: __init__.py  cascade_taxonomy.py  labeler.py  library.py  miner.py  template_matcher.py
p6lab/src/p6lab/persistence/: __init__.py  state_store.py
p6lab/src/p6lab/risk/: __init__.py  position_manager.py
p6lab/src/p6lab/validation/: __init__.py  augmentation.py  cpcv.py  information_gain.py  labelers.py  meta_labeler.py  meta_labeler_cpcv.py  multi_spec_cv.py
p6lab/tests/: conftest.py  test_activity_detector.py  test_augmentation.py  test_bsv_latent.py  test_cascade_taxonomy.py  test_coherence.py  test_correlation_engine.py  test_cost_model.py  test_cpcv.py  test_cpcv_multiday.py  test_crash_restart.py  test_cross_asset.py  test_divergence_audit.py  test_emd.py  test_energy_features.py  test_engine_cost_gate.py  test_engine_latency.py  test_engine_proba_wiring.py  test_event_windowing.py  test_feed_parity.py  test_fi_conditioner.py  test_fill_simulator.py  test_fragility_index.py  test_hasbrouck_lambda.py  test_hawkes.py  test_hilbert_features.py  test_information_gain.py  test_instrument_normalizer.py  test_l1_adapter.py  test_l1_features.py  test_l2_features.py  test_labeler.py  test_labelers.py  test_learned_regime.py  test_library.py  test_live_runner.py  test_logging.py  test_markov_lob.py  test_match_broker.py  test_meta_labeler.py  (+26 more)
p6lab/tests/fixtures/: __init__.py  mock_live_feed.py
p6lab/web/: dock.html
p6lab/web/css/: correlation_feed.css
p6lab/web/js/: correlation_feed.js  fragility_gauge.js  pattern_review_queue.js  triple_view_panel.js  virtual_order_tool.js
regime_context/: __init__.py  abstain_policy.py  regime_classifier.py  regime_weights.py
research/: DEMO-SCOPE.md  index.html
scripts/: claim_batch_jobs.py  collect_batches.py  debug_nq_feed.py  fetch_data.py  fetch_overnight.py  launch_p6lab.sh  morning_report.py
server/: __init__.py  app.py  backtest_api.py  config.py  engine_runner.py  replay_api.py  replay_engine.py  webhook_bridge.py  websocket.py
spectral_force/: __init__.py  band_splitter.py  energy_per_band.py  (+4 more)
(+76 files in other folders)
