[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "p6-orderbook-meta"
version = "0.1.0"
description = "P6 Staircase Order Book Meta Model — 5-layer depth indicator"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "aiohttp",
    "numpy",
    "pydantic>=2.0",
    "databento",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".."]
addopts = ""
